--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -89,72 +89,90 @@
     </div>
   </nav>
 
+  <div class="modal" id="myModal-success" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header modal-header-success text-align"> Félicitations ! </div>
+        <div class="modal-body">
+          <p>Votre compte va être activé très prochainement.
+            <button class="btn btn-default pull-right" type="button" data-dismiss="modal"><i class="icon icon-times icon-lg"></i> Fermer</button></p>
 
-  <div class="container-fluid" id="section1">
-    <div class="container" style="padding:50px;">
-      <h1>Fatigués des relais colis? <br>Des avis de passage?</h1>
-      <p class="lead">Faites vous livrer chez votre voisin</p>
-      <h2 style="margin-top:150px;">Ou bien réceptionnez des colis pour vos voisins à hauteur de <strong>2€</strong> par colis</h2>
-      <div class="dropup">
-        <button class="btn btn-default btn-lg dropdown-toggle" type="button" data-toggle="dropdown">Devenir Relayer<span class="glyphicon glyphicon-edit"></span></button>
-        <ul class="dropdown-menu">
-          <li><form action="/users" method="POST" class="form-horizontal">
-            <fieldset>
+          </div>
+        </div>
+      </div>
+    </div>
 
-              <!-- Form Name -->
-              <legend class="text-center">Inscription</legend>
 
-              <!-- Text input-->
-              <div class="form-group">
-                <div class="col-md-10 col-md-offset-1">
-                  <input id="prenom" name="prenom" type="text" placeholder="Prénom" class="form-control input-md" required="">
+    <div class="container-fluid" id="section1">
+      <div class="container" style="padding:50px;">
+
+        <h1>Fatigués des relais colis? <br>Des avis de passage?</h1>
+
+        <p class="lead">Faites vous livrer chez votre voisin</p>
+
+        <h2 style="margin-top:150px;">Ou bien réceptionnez des colis pour vos voisins à hauteur de <strong>2€</strong> par colis</h2>
+
+        <div class="dropup">
+          <button class="btn btn-default btn-lg dropdown-toggle" type="button" data-toggle="dropdown">Devenir Relayer <span class="glyphicon glyphicon-edit"></span></button>
+          <ul class="dropdown-menu">
+            <li><form action="/users" method="POST" class="form-horizontal">
+              <fieldset>
+
+                <!-- Form Name -->
+                <legend class="text-center">Inscription</legend>
+
+                <!-- Text input-->
+                <div class="form-group">
+                  <div class="col-md-10 col-md-offset-1">
+                    <input id="prenom" name="prenom" type="text" placeholder="Prénom" class="form-control input-md" required="">
+                  </div>
                 </div>
-              </div>
 
-              <!-- Text input-->
-              <div class="form-group">
-                <div class="col-md-10 col-md-offset-1">
-                  <input id="nom" name="nom" type="text" placeholder="Nom" class="form-control input-md" required="">
+                <!-- Text input-->
+                <div class="form-group">
+                  <div class="col-md-10 col-md-offset-1">
+                    <input id="nom" name="nom" type="text" placeholder="Nom" class="form-control input-md" required="">
+                  </div>
                 </div>
-              </div>
 
-              <!-- Text input-->
-              <div class="form-group">
-                <div class="col-md-10 col-md-offset-1">
-                  <input id="mail" name="mail" type="text" placeholder="Adresse email" class="form-control input-md" required="">
+                <!-- Text input-->
+                <div class="form-group">
+                  <div class="col-md-10 col-md-offset-1">
+                    <input id="mail" name="mail" type="text" placeholder="Adresse email" class="form-control input-md" required="">
+                  </div>
                 </div>
-              </div>
 
-              <!-- Password input-->
-              <div class="form-group">
-                <div class="col-md-10 col-md-offset-1">
-                  <input id="password" name="password" type="password" placeholder="Mot de passe" class="form-control input-md" required="">
+                <!-- Password input-->
+                <div class="form-group">
+                  <div class="col-md-10 col-md-offset-1">
+                    <input id="password" name="password" type="password" placeholder="Mot de passe" class="form-control input-md" required="">
+                  </div>
                 </div>
-              </div>
 
-              <!-- Password input-->
-              <div class="form-group">
-                <div class="col-md-10 col-md-offset-1">
-                  <input id="password" name="password" type="password" placeholder="Confirmez le mot de passe" class="form-control input-md" required="">
+                <!-- Password input-->
+                <div class="form-group">
+                  <div class="col-md-10 col-md-offset-1">
+                    <input id="password" name="password" type="password" placeholder="Confirmez le mot de passe" class="form-control input-md" required="">
+                  </div>
                 </div>
-              </div>
 
-              <!-- Text input-->
-              <div class="form-group" id="locationField">
-                <div class="col-md-10 col-md-offset-1">
-                  <input id="autocomplete" name="address" type="text" placeholder="Adresse" class="form-control input-md" required="" onFocus="geolocate()">
+                <!-- Text input-->
+                <div class="form-group" id="locationField">
+                  <div class="col-md-10 col-md-offset-1">
+                    <input id="autocomplete" name="address" type="text" placeholder="Adresse" class="form-control input-md" required="" onFocus="geolocate()">
+                  </div>
                 </div>
-              </div>
 
-              <!-- Button -->
-              <div class="form-group">
-                <div class="col-md-10 col-md-offset-1">
-                  <button a href="index.html" type="submit" class="btn btn-primary btn-success center-block" data-toggle="modal" data-target="#myModal">S'inscrire <span class="glyphicon glyphicon-ok"></span></button>
+                <!-- Button -->
+                <div class="form-group">
+                  <div class="col-md-10 col-md-offset-1">
+                    <button href="index.html" type="submit"  data-toggle="modal" class="btn btn-primary btn-success center-block"
+                    data-target="#myModal-success">S'inscrire <span class="glyphicon glyphicon-ok"></span></button>
+                  </div>
                 </div>
-              </div>
 
-            </fieldset>
-          </form></li>
+              </fieldset>
+            </form></li>
 
           </li>
         </ul>
@@ -224,7 +242,7 @@
 
 
     <footer class="footer">
-        <p class="text-muted text-center" style="padding:5px">@ Relayer 2017 - Tous droits réservés - Mentions légales - CGU</p>
+      <p class="text-muted text-center" style="padding:5px">@ Relayer 2017 - Tous droits réservés - Mentions légales - CGU</p>
     </footer>
 
 
